# kubetimer

./: .dockerignore  .env.example  .gitignore  Dockerfile  Dockerfile.async  Makefile  README.md  deploy.sh  deployment.yaml  deployment_async.yaml  generate_load.py  operator-test.py  operator_async.py  operator_sync.py  pyproject.toml  victim.yaml
crd/: example-config.yaml  kubetimerconfig.yaml
deploy/: deployment.yaml  namespace.yaml  rbac.yaml
kubetimer/: __init__.py  main.py
kubetimer/config/: __init__.py  k8s.py  settings.py
kubetimer/crd/: __init__.py  example-config.yaml  kubetimerconfig.yaml
kubetimer/handlers/: __init__.py  deployment.py  pod.py  registry.py  timer.py
kubetimer/utils/: __init__.py  logging.py  logs.py  memory_profiler.py  time_utils.py
tests/: deployment.yaml  generate_load.py  measure.py  rbac.yaml  victim.yaml
